feat(eventService): add new method and logging, refactored existing logic in EventServiceImpl